<resources>

    <!-- PopularMovies Activity-->
    <string name="app_name">MovieMasti</string>
    <string name="action_error">error occurred check the internet!!</string>
    <string name="reload_button">RELOAD</string>
    <string name="movies_rate">Rate:</string>
    <string name="menu_sort_action_popularity">Sort:Popularity</string>
    <string name="menu_sort_action_rating">Sort:Rating</string>
    <string name="action_settings">Settings</string>
    <string name="sort_toast">"No data to sort still"</string>

    <!-- MovieDetails Activity-->
    <string name="title_activity_movie_detailed_data_scrolling">MovieDetailedDataScrollingActivity</string>
    <string name="movie_details_description">Description</string>
    <string name="movie_details_release_date">Release Date :</string>
    <string name="movie_details_rate">Rating :</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="movie_details_videos">Trailers</string>
    <string name="movie_details_review_item_author_label">Author:</string>

    <!--NavigationDrawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_menu_popular_movies">Popular Movies</string>
    <string name="navigation_menu_favourite_movies">Favourite Movies</string>
    <string name="navigation_menu_top_rated_movies">Top Rated Movies</string>
    <string name="nav_drawer_name">MovieMasti</string>

    <!--Favourite Fragment-->
    <string name="favourite_action_error">Some Error occurred</string>
    <string name="reviews">Reviews</string>
    <string name="movie_details_not_available">Not Available</string>
    <string name="trailers">Trailers</string>
</resources>
