<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_popular_movies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_menu_popular_movies" />

        <item
            android:id="@+id/nav_top_rated_movies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_menu_top_rated_movies" />
        <item
            android:id="@+id/nav_favourite_movies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_menu_favourite_movies" />

    </group>


</menu>
